; ModuleID = '/home/carl/AnghaBench/linux/kernel/livepatch/extr_transition.c_klp_transition_work_fn.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/livepatch/extr_transition.c_klp_transition_work_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }

@klp_mutex = common dso_local global i32 0, align 4
@klp_transition_patch = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_struct*)* @klp_transition_work_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @klp_transition_work_fn(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  %3 = call i32 @mutex_lock(i32* @klp_mutex)
  %4 = load i64, i64* @klp_transition_patch, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = call i32 (...) @klp_try_complete_transition()
  br label %8

8:                                                ; preds = %6, %1
  %9 = call i32 @mutex_unlock(i32* @klp_mutex)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @klp_try_complete_transition(...) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
